Update README and package.json
	modified:   README.md
	modified:   package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name"        : "bloxx",
   "version"     : "0.1.0",
-  "description" : "JavaScript Models without MVC or databases.",
+  "description" : "Immutable JavaScript Models for any datastore.",
   "main"        : "lib/bloxx.js",
   "scripts": {
     "test": "eslint .",
