--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,10 @@
         "semi": [
             2,
             "always"
+        ],
+        "strict": [
+            2,
+            "function"
         ]
     },
     "env": {
