--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "brixx": "~1.5.0"
+    "brixx": "~1.6.0"
   },
   "devDependencies": {
+    "bluebird"  : "~3.1.2",
     "eslint"    : "~1.10.3",
     "expect.js" : "~0.3.1",
+    "lodash"    : "~4.0.0",
     "mocha"     : "~2.3.4"
   },
   "repository": {
