--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "eslint"    : "~1.10.3",
     "expect.js" : "~0.3.1",
     "lodash"    : "~4.0.0",
-    "mocha"     : "~2.3.4"
+    "mocha"     : "~2.3.4",
+    "sinon"     : "~1.17.2"
   },
   "repository": {
     "type" : "git",
