--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,22 @@
             2,
             "tab"
         ],
+        "max-len": [
+            2,
+            80,
+            2
+        ],
+        "key-spacing": [
+            2,
+            {"beforeColon": false, "afterColon": true}
+        ],
+        "no-multi-spaces": [
+            2
+        ],
+        "space-unary-ops": [
+            1,
+            {"words": true, "nonwords": false}
+        ],
         "quotes": [
             2,
             "single"
@@ -11,6 +27,10 @@
         "linebreak-style": [
             2,
             "unix"
+        ],
+        "no-multiple-empty-lines": [
+            2,
+            {"max": 1}
         ],
         "semi": [
             2,
