--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name"        : "bloxx",
-  "version"     : "0.3.0",
+  "version"     : "1.0.0",
   "description" : "Immutable JavaScript Models for any datastore.",
   "main"        : "lib/bloxx.js",
   "scripts": {
@@ -8,15 +8,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "brixx": "~1.6.2"
+    "brixx": "1.6.2"
   },
   "devDependencies": {
-    "bluebird"  : "~3.1.2",
-    "eslint"    : "~1.10.3",
-    "expect.js" : "~0.3.1",
-    "lodash"    : "~4.0.0",
-    "mocha"     : "~2.3.4",
-    "sinon"     : "~1.17.2"
+    "bluebird"  : "~3.2.0",
+    "eslint"    : "~1.10.0",
+    "expect.js" : "~0.3.0",
+    "lodash"    : "~4.2.0",
+    "mocha"     : "~2.4.0",
+    "sinon"     : "~1.17.0"
   },
   "repository": {
     "type" : "git",
